# revisor

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix
nix/: darwin.nix  home.nix  lib.nix  nixos.nix
src/: common.rs  control_session.rs  main.rs  poll.rs  signal.rs  sys.rs  unit_manager.rs  util.rs
