[package]
name = "revisor"
version = "0.1.0"
edition = "2024"

[lib]
name = "revisor_common"
path = "src/common.rs"

[dependencies]
getopts = { version = "0.2", default-features = false }
libc = "0.2"
once_cell = "1.19"
slab = "0.4"

[profile.small]
inherits = "release"
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
